[metadata]
name = Django-Lookout

url = https://github.com/rspeed/Django-Lookout
download_url = https://github.com/rspeed/Django-Lookout/releases

author = Rob Speed
author_email = rspeed@bounteo.us

description = API endpoint for receiving incident reports from Content Security Policy (CSP), HTTP Public Key Pinning (HPKP), and the HTTP Reporting API.
long_description_content_type = text/x-rst; charset=UTF-8
long_description = file: README.rst

license = MIT

keywords =
	django
	csp
	hpkp
	security
	error-monitoring
	https
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Web Environment
	Framework :: Django :: 1.10
	Operating System :: OS Independent
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Internet :: WWW/HTTP :: Site Management
	Topic :: Security
	Topic :: Security :: Cryptography
	Topic :: System :: Logging
	Topic :: System :: Monitoring
